--- a/customer_analysis_project3_cs.ipynb
+++ b/customer_analysis_project3_cs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "df11cf57-7113-49be-a0b3-782d37443140",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "08d958b0-f646-4f89-8575-03f63a7271fa",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "62c67680-0e58-458d-bc02-fd2ee56c7a00",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
        "      <td>OFF-ST-10000760</td>\n",
        "      <td>Office Supplies</td>\n",
        "      <td>Storage</td>\n",
-       "      <td>Eldon Fold N Roll Cart System</td>\n",
+       "      <td>Eldon Fold 'N Roll Cart System</td>\n",
        "      <td>22.3680</td>\n",
        "      <td>2</td>\n",
        "      <td>0.20</td>\n",
@@ -231,7 +231,7 @@
        "1  Hon Deluxe Fabric Upholstered Stacking Chairs,...  731.9400         3   \n",
        "2  Self-Adhesive Address Labels for Typewriters b...   14.6200         2   \n",
        "3      Bretford CR4500 Series Slim Rectangular Table  957.5775         5   \n",
-       "4                      Eldon Fold N Roll Cart System   22.3680         2   \n",
+       "4                     Eldon Fold 'N Roll Cart System   22.3680         2   \n",
        "\n",
        "   Discount    Profit  \n",
        "0      0.00   41.9136  \n",
@@ -243,7 +243,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "45a57f41-48f5-4e14-b758-48c64a95ae7b",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a8be2374-5f65-4d86-b1dc-b25179cd750c",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "4a7be3df-7f53-4ca8-b77d-96ecf52596ad",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "34b6aa81-bca7-4e9b-b4fe-415b9882cc8f",
    "metadata": {},
    "outputs": [
@@ -532,7 +532,7 @@
        "      <td>OFF-ST-10000760</td>\n",
        "      <td>Office Supplies</td>\n",
        "      <td>Storage</td>\n",
-       "      <td>Eldon Fold N Roll Cart System</td>\n",
+       "      <td>Eldon Fold 'N Roll Cart System</td>\n",
        "      <td>22.3680</td>\n",
        "      <td>2</td>\n",
        "      <td>0.20</td>\n",
@@ -570,7 +570,7 @@
        "1  Hon Deluxe Fabric Upholstered Stacking Chairs,...  731.9400         3   \n",
        "2  Self-Adhesive Address Labels for Typewriters b...   14.6200         2   \n",
        "3      Bretford CR4500 Series Slim Rectangular Table  957.5775         5   \n",
-       "4                      Eldon Fold N Roll Cart System   22.3680         2   \n",
+       "4                     Eldon Fold 'N Roll Cart System   22.3680         2   \n",
        "\n",
        "   Discount    Profit  \n",
        "0      0.00   41.9136  \n",
@@ -582,7 +582,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "db4380ca-c079-4fa7-8b7d-3a42a5544db9",
    "metadata": {},
    "outputs": [
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "8581319b-6918-4705-9d4a-92d58cf3dbb7",
    "metadata": {},
    "outputs": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "3727e90f-539e-45a0-a60e-99aefc4714b8",
    "metadata": {},
    "outputs": [
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "8fc391f0-e7c8-4ecb-9445-d572621748c9",
    "metadata": {},
    "outputs": [
@@ -794,7 +794,7 @@
        "4  -3472.5560  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "dc287fbd-9e4b-4508-beeb-ce41e425ff4d",
    "metadata": {},
    "outputs": [
@@ -892,7 +892,7 @@
        "2  145454.9481  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ec9e51ca-6016-4fca-aa5d-8af909b857d8",
    "metadata": {},
    "outputs": [
@@ -926,7 +926,7 @@
        "Name: Sales, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "1902f7d1-ac06-455a-b896-a31c44480590",
    "metadata": {},
    "outputs": [
@@ -1042,7 +1042,7 @@
        "4  -3472.5560  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "943211f6-170e-46cd-8e85-dfd330441b60",
    "metadata": {},
    "outputs": [
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "af41391b-8fb4-4af8-b589-f14ac7f37810",
    "metadata": {},
    "outputs": [
@@ -1163,7 +1163,7 @@
        "2  145454.9481  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "33288f9e-36fc-47b9-a828-373ceddaac89",
    "metadata": {},
    "outputs": [
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "c1c14127-9642-4ba4-b4ea-d3123e8758e2",
    "metadata": {},
    "outputs": [
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "a2d158d3-16b1-4a7d-b5e3-6f752764c759",
    "metadata": {},
    "outputs": [
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "2c63ddf3-cc4a-4e45-8d90-3e2542a1d2b3",
    "metadata": {},
    "outputs": [
@@ -1469,7 +1469,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "2cf3d11c-bcaf-4dcc-8d34-c6a46f39da56",
    "metadata": {},
    "outputs": [
@@ -1514,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "4eca6c80-2a23-4100-9040-a9e3be9486f9",
    "metadata": {},
    "outputs": [
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "a6ca0f6c-0ae7-48b8-8715-68ac14c7abcd",
    "metadata": {},
    "outputs": [
@@ -1629,7 +1629,7 @@
        "      <td>OFF-ST-10000760</td>\n",
        "      <td>Office Supplies</td>\n",
        "      <td>Storage</td>\n",
-       "      <td>Eldon Fold N Roll Cart System</td>\n",
+       "      <td>Eldon Fold 'N Roll Cart System</td>\n",
        "      <td>22.3680</td>\n",
        "      <td>2</td>\n",
        "      <td>0.20</td>\n",
@@ -1736,7 +1736,7 @@
        "\n",
        "                                         Product Name      Sales  Quantity  \\\n",
        "3       Bretford CR4500 Series Slim Rectangular Table   957.5775         5   \n",
-       "4                       Eldon Fold N Roll Cart System    22.3680         2   \n",
+       "4                      Eldon Fold 'N Roll Cart System    22.3680         2   \n",
        "14  Holmes Replacement Filter for HEPA Air Cleaner...    68.8100         5   \n",
        "15   Storex DuraTech Recycled Plastic Frosted Binders     2.5440         3   \n",
        "24      Bretford CR4500 Series Slim Rectangular Table  1044.6300         3   \n",
@@ -1751,7 +1751,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1768,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "08711847-345f-4356-af5c-c8342f1fc342",
    "metadata": {},
    "outputs": [
@@ -1796,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "7b42cd60-e5c2-4f88-84f6-2fb3f7e94be6",
    "metadata": {},
    "outputs": [
@@ -1820,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "ebf8c344-ed6b-4f4b-873f-0b22edd28e17",
    "metadata": {},
    "outputs": [
@@ -2033,7 +2033,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2050,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "19d08773-c62f-4837-beb3-e584c73a7519",
    "metadata": {},
    "outputs": [
@@ -2078,7 +2078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "b0c84c80-cbcc-4f0f-8e4f-dfa7c4b33585",
    "metadata": {},
    "outputs": [
@@ -2102,7 +2102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "9bbd73ca-80d6-4271-8ca0-05ee6c122f0b",
    "metadata": {},
    "outputs": [
@@ -2315,7 +2315,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2332,7 +2332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "a66fd670-ac56-4f3d-907d-9b996c645e32",
    "metadata": {},
    "outputs": [
@@ -2360,7 +2360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "707fde6e-e2cb-4660-8c70-22acb26adb28",
    "metadata": {
     "scrolled": true
@@ -2386,7 +2386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "77dbf65f-6be3-4d8a-b11c-1e118ea43313",
    "metadata": {},
    "outputs": [
@@ -2599,7 +2599,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2616,7 +2616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "667f5e45-bf56-4406-993a-742aafcf958f",
    "metadata": {},
    "outputs": [
@@ -2644,7 +2644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "3e8c4ba7-be4d-4ea5-b4b9-fdbcaf1043c2",
    "metadata": {},
    "outputs": [
@@ -2668,7 +2668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "20df023b-8048-4d05-b934-f6f29bacface",
    "metadata": {},
    "outputs": [
@@ -2692,7 +2692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "11eb36e1-da9e-416b-8d55-0dde93089e15",
    "metadata": {},
    "outputs": [
@@ -2716,7 +2716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "d5b6195f-eb8e-44f8-99e0-b1feb231be70",
    "metadata": {},
    "outputs": [
@@ -2740,7 +2740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "2a1e2f5d-7e3d-4330-a2b7-bb3120fc528f",
    "metadata": {},
    "outputs": [
@@ -2764,7 +2764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "5d723cbd-618c-4d38-9870-dbf63f32f381",
    "metadata": {},
    "outputs": [
@@ -2788,7 +2788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "2b530a0b-09ad-49d6-ab59-da0c197262d8",
    "metadata": {},
    "outputs": [
@@ -2818,7 +2818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "d05db0a3-d7f8-422e-b18c-2bc719a24ec5",
    "metadata": {},
    "outputs": [
@@ -2847,7 +2847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "4a8915de-6310-445d-824c-ffbd8f6fff3a",
    "metadata": {},
    "outputs": [],
@@ -2866,7 +2866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "fb8d22ae-4a52-4f64-9bb0-e68508eed708",
    "metadata": {},
    "outputs": [
@@ -2895,7 +2895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 45,
    "id": "32b4723a-7429-457a-beb9-a6ccfc3d9708",
    "metadata": {},
    "outputs": [
@@ -2923,7 +2923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 46,
    "id": "5caee67e-6858-4c47-9d4d-6727d830746c",
    "metadata": {},
    "outputs": [],
@@ -2943,7 +2943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 47,
    "id": "b8b1c68a-e13c-4c16-9879-2b568eb07e79",
    "metadata": {},
    "outputs": [
@@ -2971,7 +2971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 48,
    "id": "60707138-ffc5-4ed1-9092-71791a92d814",
    "metadata": {},
    "outputs": [
